# Lightspace

./: .gitignore  CMakeLists.txt  README.md  build.ps1  build.sh
source/: CMakeLists.txt
source/lightspace/: main.cpp
source/lightspace/private/: camera.cpp  canvas.cpp  intersection.cpp  lights.cpp  materials.cpp  model_parser.cpp  patterns.cpp  shapes.cpp  world.cpp
source/lightspace/public/: camera.hpp  canvas.hpp  common.hpp  intersection.hpp  lights.hpp  materials.hpp  matrix.hpp  model_parser.hpp  patterns.hpp  ray.hpp  shapes.hpp  tensor.hpp  transform.hpp  world.hpp
tests/: CMakeLists.txt  camera_tests.cpp  canvas_tests.cpp  cone_tests.cpp  cube_tests.cpp  cylinder_tests.cpp  group_tests.cpp  intersection_tests.cpp  light_tests.cpp  material_tests.cpp  matrix_tests.cpp  model_parser_tests.cpp  pattern_tests.cpp  plane_tests.cpp  ray_tests.cpp  sphere_tests.cpp  tensor_tests.cpp  transform_tests.cpp  triangle_tests.cpp  world_tests.cpp
